// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/MaxWidth handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--rs-max-w-s": "50%",
  },
}
`;

exports[`Styles/MaxWidth handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--rs-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--rs-max-w-l": "50%",
    "--rs-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth handles undefined value 1`] = `null`;

exports[`Styles/MaxWidth handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--rs-max-w-s": 5,
  },
}
`;
